fixing spacing on contact page

--- a/project_2/css/main_style.css
+++ b/project_2/css/main_style.css
@@ -159,4 +159,5 @@ footer p a {
 
 td {
 	font-family: Tahoma, Helvetica, Arial, sans-serif;
+	padding-right: 5px;
 }
